Midway through reorganization

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,7 +1,10 @@
 [[Migration]]
 = Migration
 
-This section describes the actual migration process, while you are running the migration plan.
+The migration phase has 2 key stages:
 
-include::modules/con_Migration_overview.adoc[leveloffset=+1]
-include::modules/con_Troubleshooting.adoc[leveloffset=+1]
+* xref:Creating_an_Infrastructure_Mapping[Mapping] your source environment to your target environment and selecting the virtual machines to migrate
+* Performing the xref:Creating_and_running_a_migration_plan[migration]
+
+include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
+include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
