--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,10 +1,10 @@
 [[Planning]]
 = Planning
 
-The planning phase of the migration has 2 key stages:
+The planning phase enables you to formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months." You must determine your migration requirements and follow the best practices.
 
-* Creating an infrastructure mapping
-* Creating and running a migration plan
+The power state of the migrated virtual machines is preserved: a virtual machine that is powered on or off before migration will be in the same power state after migration.
 
-include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
-include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+include::modules/ref_Determining_your_migration_requirements.adoc[leveloffset=+1]
+include::modules/ref_Migration_example.adoc[leveloffset=+1]
+include::modules/ref_Best_practices.adoc[leveloffset=+1]
