--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_rhv_conversion_hosts.adoc
@@ -1,7 +1,9 @@
-[id="rhv_conversion_hosts"]
-= RHV Conversion Hosts
+[id="Preparing_the_rhv_conversion_hosts"]
+= Preparing the RHV Conversion Hosts
 
-All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you create depends on the number of virtual machines you intend to migrate. Red Hat recommends configuring the RHV conversion hosts on physical machines, not nested virtual machines.
+Because all the virtual machines are migrated at the same time, the number of RHV conversion hosts you must create depends on the number of virtual machines you are migrating.
+
+Configure the RHV conversion hosts on physical machines, not nested virtual machines.
 
 Each conversion host is limited to `10` concurrent migrations, unless you change the default value (see xref:Configuring_the_maximum_number_of_concurrent_migrations[] below).
 
@@ -30,3 +32,8 @@ SSH::
 * SSH access must be enabled on ESXi hosts
 * Slower than VDDK
 * Suitable for larger scale migrations than VDDK
+
+include::proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc[leveloffset=+1]
+include::proc_Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation.adoc[leveloffset=+1]
+include::proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
+include::proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
