--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Ims_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Ims_rhv_workflow.adoc
@@ -1,12 +1,11 @@
-[id="Migration_overview"]
-= Workflow
+[id="IMS_RHV_workflow"]
+.Workflow for Migrating from VMware to Red Hat Virtualization
 
-The diagram below provides a high-level view of the infrastructure migration workflow. An understanding of this workflow will greatly simplify troubleshooting.
+The following diagram describes the workflow that occurs when you run a VMware-to-RHV migration plan.
 
-.Migration Workflow
-image:migration_workflow.png[]
+image:vmware_to_rhv_migration_workflow.png[]
 
-. The Infrastructure Admin creates an infrastructure mapping and a virtual machine migration plan in CloudForms and runs the migration plan.
+. After creating an infrastructure mapping and a migration plan in CloudForms, you run the migration plan.
 . CloudForms locates the virtual machines to be migrated based on the infrastructure mapping.
 . The ESXi host fingerprint is captured for authentication during the conversion process if the VDDK transport method is used. If SSH is used, a shared SSH key is used to connect to the ESX host where the virtual machine resides.
 . Using the RHV attributes for the target environment, CloudForms initiates communication with the RHV conversion host.
