--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -4,9 +4,10 @@
 .Migration Screen
 image:Compute_Manage_UI.png[]
 
-In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
+Map your VMware resources to RHV resources:
 
-. Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
+. Click menu:Compute[Migration].
+. Click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
 . Click *Add Mapping* and *Next*.
@@ -24,10 +25,10 @@ In CloudForms, create an infrastructure mapping to map your VMware resources to 
 .. Click *Add Mapping*.
 
 . Click *Create*.
-. If a successful mapping message is displayed, click *Close*.
+. If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Troubleshooting[].
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration].
 +
 image:infrastructure_mapping_created.png[]
 
-After creating an infrastructure mapping, create a migration plan.
+After you have created a successful infrastructure mapping, you are ready to create and run a  xref:Creating_and_running_a_migration_plan[migration plan].
