--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_example.adoc
@@ -1,10 +1,7 @@
 [id="Migration_example"]
-// [discrete]
-= Migration Example
+.Migration Example
 
-This migration example can help you to estimate how long your migration will take.
-
-This environment took 1 hour and 30 minutes to migrate:
+This migration example, which took 1 hour and 30 minutes to complete, can help you estimate the duration of your migration process:
 
 * Infrastructure:
 
