--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,15 +1,25 @@
 [[Creating_an_Infrastructure_Mapping]]
 = Creating an Infrastructure Mapping
 
+The infrastructure mapping maps your VMware resources to RHV resources.
+
 .Migration Screen
 image:Compute_Manage_UI.png[]
 
-Map your VMware resources to RHV resources:
+[NOTE]
+====
+Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts]. Otherwise, the network will be missing in the  infrastructure mapping.
+====
 
-. Click menu:Compute[Migration].
-. Click *Create Infrastructure Mapping*.
+. Click menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
++
+[NOTE]
+====
+A target cluster that does not contain a conversion host is marked with a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
+====
+
 . Click *Add Mapping* and *Next*.
 
 . Map the datastore of each cluster:
