--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_source_and_target_environments.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_source_and_target_environments.adoc
@@ -3,6 +3,8 @@
 
 Before migration, you must prepare your source and target environments:
 
+. Check the source virtual machine names. Virtual machine names may contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted. 
+
 . Plan and set up the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[RHV target environment].
 
 . Ensure that the target datastore has sufficient space for the virtual machines you are migrating.
@@ -26,14 +28,14 @@ The network configuration must not be changed in any way during the migration. I
 * 902 - CloudForms to VMware
 * 5480 - `virt-v2v` to vCenter
 
-. Attach the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_NFS_Storage[Data and ISO storage domains] to the target RHV data center.
-
-. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain.
+. Attach the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#chap-Storage[Data and ISO storage domains] to the target RHV data center.
 +
 [NOTE]
 ====
-The VirtIO image file name must include the version number: virtio-win-_version_.iso.
+IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
 ====
+
+. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain. The VirtIO image file name must include the version number: `virtio-win-_version_.iso`.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.6.4 or later.
 
