--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,10 +1,11 @@
 [id="IMS_preparation"]
-= Preparation
+= Preparing Your Infrastructure
 
-Before migration, you must prepare the following:
+To prepare your infrastructure for migration, you perform the following tasks:
 
-* xref:Preparing_the_source_and_target_environments[Source environment and target environments]
-* xref:Preparing_the_rhv_conversion_hosts[Conversion host(s)]
+* Configure your current infrastructure as the xref:Preparing_the_source_and_target_environments[source environment]
+* Create and configure Red Hat Virtualization as the xref:Preparing_the_source_and_target_environments[target environment]
+* Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)]
 
 include::modules/proc_Preparing_the_source_and_target_environments.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_rhv_conversion_hosts.adoc[leveloffset=+1]
