--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Workflow_vmware_to_rhv.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Workflow_vmware_to_rhv.adoc
@@ -1,7 +1,7 @@
-[id="IMS_RHV_workflow"]
-.Workflow for Migrating from VMware to Red Hat Virtualization
+[id="Workflow_vmware_to_rhv"]
+.Workflow: VMware to Red Hat Virtualization
 
-The following diagram describes the workflow that occurs when you run a VMware-to-RHV migration plan.
+This workflow occurs when you run a migration plan to migrate your infrastructure from VMware to Red Hat Virtualization.
 
 image:vmware_to_rhv_migration_workflow.png[]
 
