--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -5,7 +5,7 @@ The default limit for concurrent migrations is `10` for a conversion host and `1
 
 [IMPORTANT]
 ====
-The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation. The SSH transformation limitation applies only to Red Hat Virtualization 4.2.5, not to later versions.
+The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation. The SSH transformation limitation applies only to RHV 4.2.5, not to later versions of RHV.
 ====
 
 The following examples show how to set `Max Transformation Runners` using the Rails console on the CloudForms appliance.
@@ -42,7 +42,7 @@ irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeW
 irb(main):002:0> $evm.vmdb(:host).find_by(:name => "_host1.example.com_").custom_get("Max Transformation Runners")
 ----
 
-To get the configuration of `Max Transformation Runners` for  provider _My RHV_:
+To get the configuration of `Max Transformation Runners` for provider _My RHV_:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
