--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
@@ -1,7 +1,7 @@
-[id="Determining_your_migration_requirements"]
-= Determining Your Migration Requirements
+[id="Planning_questions"]
+= Planning Questions
 
-The following questions can help you to determine your migration requirements:
+These questions will ensure that you have sufficient resources to perform the migration:
 
 What am I migrating?::
 Identify the hosts and virtual machines to be migrated. If your deployment is large and complex, you may want to divide your resources into migration groups.
