--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -5,26 +5,26 @@ Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your vi
 
 link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] (CF),  provides the control and automation required to manage challenging enterprise environments.
 
-Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
+Currently, IMS supports only cold migration. The virtual machines are powered off gracefully as part of the migration process.
 
-.Phases
+.IMS Phases
 
-The infrastructure migration process has 4 key phases:
+The Infrastructure Migration Solution has 4 key phases:
 
-. Preparation:
-** xref:Preparing_the_source_and_target_environments[Setting up your environment]
-** xref:Preparing_the_rhv_conversion_hosts[Creating and configuring the conversion host(s)]
+. Preparing your infrastructure for migration:
+.. Create and configure the xref:Preparing_the_source_and_target_environments[source and target environments].
+.. Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)].
 
-. Planning:
-** xref:Determining_your_migration_requirements[Determining your migration requirements]
-** Following xref:Best_practices[best practices]
+. Planning the migration:
+.. Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources.
+.. Follow xref:Best_practices_for_migration[best practices] to adjust the migration to fit your needs and schedule. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
 
-. Migration:
-** xref:Creating_an_Infrastructure_Mapping[Mapping] your source environment to the target environment
-** Performing the xref:Creating_and_running_a_migration_plan[migration]
+. Migrating the infrastructure:
+.. xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment, selecting the virtual machines to migrate.
+.. Create and run a xref:Creating_and_running_a_migration_plan[migration plan], with optional automated pre- and post-migration tasks.
 
-. Verification:
-** Check that your virtual machines have migrated successfully.
-** If errors appear, see xref:Troubleshooting[].
+. Verifying the migration:
+.. The completed migration plan shows successfully migrated virtual machines.
+.. If errors appear, see xref:Troubleshooting[].
 
-include::modules/con_Ims_rhv_workflow.adoc[leveloffset=+1]
+include::modules/con_Workflow_vmware_to_rhv.adoc[leveloffset=+1]
