--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,10 +1,13 @@
 [[Migration]]
-= Migration
+= Migrating Your Infrastructure
 
-The migration phase has 2 key stages:
+The migration phase comprises 2 tasks:
 
-* xref:Creating_an_Infrastructure_Mapping[Mapping] your source environment to your target environment and selecting the virtual machines to migrate
-* Performing the xref:Creating_and_running_a_migration_plan[migration]
+* xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (cluster, datastore, and networks) of your source environment to your target environment and selecting virtual machines to migrate
+
+* Creating a xref:Creating_and_running_a_migration_plan[migration plan] with optional xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] to run before or after each virtual machine is migrated
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+include::modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc[leveloffset=+1]
+include::modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc[leveloffset=+2]
