--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,10 +1,12 @@
 [[Planning]]
-= Planning
+= Planning Your Migration
 
-The planning phase enables you to formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months." You must determine your migration requirements and follow the best practices.
+During the planning phase, you will formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
 
-The power state of the migrated virtual machines is preserved: a virtual machine that is powered on or off before migration will be in the same power state after migration.
+The xref:Planning_questions[planning questions] and xref:Best_practices_for_migration[best practices] provide guidance for creating a migration strategy that is suitable for your particular environment.
 
-include::modules/ref_Determining_your_migration_requirements.adoc[leveloffset=+1]
+The xref:Migration_example[migration example] can help you estimate the time duration of the migration.
+
+include::modules/ref_Planning_questions.adoc[leveloffset=+1]
 include::modules/ref_Migration_example.adoc[leveloffset=+1]
-include::modules/ref_Best_practices.adoc[leveloffset=+1]
+include::modules/ref_Best_practices_for_migration.adoc[leveloffset=+1]
