--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
@@ -1,12 +1,10 @@
 [id="Configuring_rhv_conversion_hosts_in_cloudforms"]
 = Configuring RHV Conversion Hosts in CloudForms
 
-Configure the RHV conversion hosts in CloudForms:
-
 . Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
-. Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value. See xref:datapath_transformation_options_vddk_ssh[Datapath Transformation Options: VDDK vs. SSH] for more information.
+. Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value.
 . Click `Save`.
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
