--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -3,9 +3,7 @@
 
 .Prerequisites
 
-* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, you must create a CSV file [[CSV_file]]containing a list of source virtual machines to migrate.
-+
-The CSV file specifies the virtual machine names (mandatory) and providers (optional, for differentiating virtual machines with identical names), in the following format:
+* [[CSV_file]]Create a CSV file listing the source virtual machines if you are migrating a large number of virtual machines or if you are re-migrating specific virtual machines after a failed migration. The CSV file contains the virtual machine names (mandatory) and providers (optional, to differentiate virtual machines with identical names) in the following format:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -15,16 +13,23 @@ _vm02_, _vSphere3_
 _vm03_, _vSphere3_
 ...
 ----
++
+If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.
 
-* Check the target datastore to ensure that there are no virtual machines with the same name as a source virtual machine. A name conflict will cause the migration to fail.
+* Check the target datastore to ensure that no virtual machine has the same name as a source virtual machine.
 
-* Unmount any ISO images that are mounted on source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
+* Unmount ISO images from source virtual machines.
 
-If you are migrating a small number of virtual machines, you can use the migration plan to discover the virtual machines. The migration plan displays a list, from which you manually select the virtual machines to migrate.
+[NOTE]
+====
+A virtual machine will be in the same power state (`on` or `off`) after migration as it was before migration.
+====
 
 .Procedure
 
-. Click menu:Compute[Migration] and click *Create Migration Plan*.
+. Click menu:Compute[Migration].
+
+. Click *Create Migration Plan*.
 
 . Select the infrastructure mapping from the drop-down list.
 
@@ -48,32 +53,23 @@ image:Discover_VMs.png[]
 
 . Select the virtual machines to migrate and click *Next* to go to *Advanced Options*.
 +
+[[Advanced_options_screen]]
 .Advanced Options
 image:Advanced_Options.png[]
 +
-You can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible] below.
+(Optional) You can select xref:Automating_pre_and_post_migration_tasks_with_ansible[Ansible playbook services] to run on the virtual machines in the migration plan before or after the migration. For example, the xref:Ims_rhel_pre-migration_ansible_playbook_example[RHEL pre-migration playbook] performs several tasks to configure a target RHEL virtual machine. You must create the xref:Creating_an_Ansible_service_catalog_item[Ansible environment and service catalog item] before the migration plan.
 
-. Select *Start Migration Immediately* and click *Create*.
+. Click *Next* to go to *Schedule*.
 
-. Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time are displayed. To view the migration progress of individual virtual machines, click the migration plan to display the migration plan details.
+. If you do not wish to schedule the migration to run at a certain time in the future, select *Start Migration Immediately* and click *Create*.
+
+. Click *Close*. The migration plan may take some time to complete. The migration plan window displays *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time.
++
+To view the migration progress of individual virtual machines, click the migration plan name to display the migration plan details.
 +
 [NOTE]
 ====
 During migration, the counter displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the counter that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
 ====
 
-. Verify that migration was successful by checking the status of the migration plan under *Completed Migrations*. The completed migration plan displays successfully migrated virtual machines. A xref:Retrying_a_Migration_Plan[*Retry*] option enables you to re-migrate any virtual machines in this plan that failed to migrate. See xref:Troubleshooting[] for more information.
-
-[[Option_Pre_and_Post_Migration_Tasks_with_Ansible]]
-.Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible
-
-Certain tasks may need to be performed before or after a virtual machine is migrated, for example, removing web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration. When you create a migration plan, you can specify an Ansible service catalog item to be run before or after each virtual machine within the plan is migrated.
-
-You must create the Ansible service catalog item before you create the migration plan. At least one repository, one playbook, and one credential must exist in the CloudForms inventory.
-
-To create an Ansible service catalog item:
-
-. Configure the Ansible repository and credentials (see
-link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_providers/automation_management_providers#ansible-inside[Ansible] in _CloudForms: Managing Providers_).
-. Create a catalog bundle (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#creating-a-catalog-bundle[Creating a Catalog Bundle] in _CloudForms: Provisioning Virtual Machines and Hosts_).
-. Create the Ansible service catalog item (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] in _CloudForms: Provisioning Virtual Machines and Hosts_).
+. When the migration plan has finished, check the status of the migration plan under *Completed Migrations*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
