--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_source_and_target_environments.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_source_and_target_environments.adoc
@@ -3,8 +3,6 @@
 
 Before migration, you must prepare your source and target environments:
 
-. Check the source virtual machine names. Virtual machine names may contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted. 
-
 . Plan and set up the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[RHV target environment].
 
 . Ensure that the target datastore has sufficient space for the virtual machines you are migrating.
@@ -40,6 +38,12 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.6.4 or later.
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[source] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[target] environments to CloudForms.
+
+. Validate the source virtual machine names. Virtual machine names may contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
+
+. Check that no source virtual machine has the same name as a virtual machine in the target environment. A name conflict will cause the migration to fail.
+
+. Unmount ISO images from source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
 . Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[RHV hosts].
 
