moved planning before prep

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,11 +1,11 @@
 [id="IMS_preparation"]
-= Preparing Your Infrastructure
+= Preparing the Migration Environment
 
-To prepare your infrastructure for migration, you perform the following tasks:
+Preparing your environment for migration comprises the following tasks:
 
-* Configure your current infrastructure as the xref:Preparing_the_source_and_target_environments[source environment]
-* Create and configure Red Hat Virtualization as the xref:Preparing_the_source_and_target_environments[target environment]
-* Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)]
+* Configuring your current infrastructure as the xref:Preparing_the_source_and_target_environments[source environment]
+* Creating and configuring Red Hat Virtualization as the xref:Preparing_the_source_and_target_environments[target environment]
+* Creating and configuring the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)]
 
 include::modules/proc_Preparing_the_source_and_target_environments.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_rhv_conversion_hosts.adoc[leveloffset=+1]
