--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -3,7 +3,7 @@
 
 Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization.
 
-link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] (CF),  provides the control and automation required to manage challenging enterprise environments.
+link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] (CF),  provides the control and automation required to manage challenging enterprise environments.
 
 Currently, IMS supports only cold migration. The virtual machines are powered off gracefully as part of the migration process.
 
@@ -11,20 +11,20 @@ Currently, IMS supports only cold migration. The virtual machines are powered of
 
 The Infrastructure Migration Solution has 4 key phases:
 
-. Preparing your infrastructure for migration:
+. Planning the migration:
+.. Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources for the migration.
+.. Follow xref:Best_practices_for_migration[best practices] to minimize the impact on your users. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
+
+. Preparing the migration environment:
 .. Create and configure the xref:Preparing_the_source_and_target_environments[source and target environments].
 .. Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)].
-
-. Planning the migration:
-.. Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources.
-.. Follow xref:Best_practices_for_migration[best practices] to adjust the migration to fit your needs and schedule. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
 
 . Migrating the infrastructure:
 .. xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment, selecting the virtual machines to migrate.
 .. Create and run a xref:Creating_and_running_a_migration_plan[migration plan], with optional automated pre- and post-migration tasks.
 
 . Verifying the migration:
-.. The completed migration plan shows successfully migrated virtual machines.
+.. Check the completed migration plan for successfully migrated virtual machines.
 .. If errors appear, see xref:Troubleshooting[].
 
 include::modules/con_Workflow_vmware_to_rhv.adoc[leveloffset=+1]
