--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,11 +1,11 @@
 [[Planning]]
-= Planning Your Migration
+= Planning the Migration
 
 During the planning phase, you will formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
 
-The xref:Planning_questions[planning questions] and xref:Best_practices_for_migration[best practices] provide guidance for creating a migration strategy that is suitable for your particular environment.
+The xref:Planning_questions[planning questions] provide guidance for allocating resources. A xref:Migration_example[migration example] is provided so that you can estimate the time duration of the migration.
 
-The xref:Migration_example[migration example] can help you estimate the time duration of the migration.
+xref:Best_practices_for_migration[Best practices for migration] help you tailor the migration so that it fits your needs and schedule.
 
 include::modules/ref_Planning_questions.adoc[leveloffset=+1]
 include::modules/ref_Migration_example.adoc[leveloffset=+1]
