--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,34 +1,19 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If errors occur for reasons unrelated to the infrastructure mapping or migration plan, you can xref:Retrying_a_Migration_Plan[retry the migration plan] or xref:Remigrating_Virtual_Machines[remigrate virtual machines].
+If errors occur for reasons unrelated to the infrastructure mapping or migration plan, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
 
-If the causes are not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
+If the cause of the failed migration is not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
 
 [[Retrying_a_Migration_Plan]]
 == Retrying a Migration Plan
 
-*%%% NOTE from Avital. Not clear to me what the difference is between retrying a migration plan and remigrating VMs. Seems to me that retrying migration plan would require CSV file to import VMs if target VMs were created (see step 2, where they need to be deleted). Need to ask Brett and Marco whether this is really the same use case or what the difference is. %%%*
-
-If one or more virtual machines in a migration plan fail to migrate, the migration plan's status is `Failed`. You can retry a migration plan:
+If one or more virtual machines in a migration plan fails to migrate, the migration plan's status is `Failed`. You can retry a migration plan:
 
 . Click the migration plan to go to the details page to identify the virtual machines that failed to migrate.
-. Delete the target virtual machines corresponding to the source virtual machines that failed to migrate. Otherwise, the retry will fail because a target machine with the same name already exists.
+. Delete the target virtual machines that were created during the failed migration to avoid name conflicts.
+. Delete the target disks that were created during the failed migration to free up space.
 . Click menu:Compute[Migration], select `Failed Migrations`, select the failed migration plan, and click `Retry`.
-
-[[Remigrating_Virtual_Machines]]
-== Remigrating Virtual Machines
-
-If the migration fails or if your migration goals change, you can remigrate previously migrated virtual machines:
-
-. Delete the target virtual machines corresponding to the source virtual machines that you are remigrating.
-. Delete the disks belonging to these virtual machines, which were created in the target datastore during the earlier migration, to free up space.
-. Create a xref:CSV_file[CSV file] to import the source virtual machines.
-+
-[NOTE]
-====
-The virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
-====
 
 [[Logs]]
 == Logs
