--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -3,7 +3,9 @@
 
 .Prerequisites
 
-* [[CSV_file]]Create a CSV file listing the source virtual machines if you are migrating a large number of virtual machines or if you are re-migrating specific virtual machines after a failed migration. The CSV file contains the virtual machine names (mandatory) and providers (optional, to differentiate virtual machines with identical names) in the following format:
+* [[CSV_file]]Create a CSV file listing the source virtual machines if you are migrating a large number of virtual machines or if you are xref:Remigrating_Virtual_Machines[remigrating previously migrated virtual machines].
++
+The CSV file contains the virtual machine names (mandatory) and providers (optional, to differentiate virtual machines with identical names) in the following format:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -14,7 +16,10 @@ _vm03_, _vSphere3_
 ...
 ----
 +
+[NOTE]
+====
 If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.
+====
 
 * Check the target datastore to ensure that no virtual machine has the same name as a source virtual machine.
 
