--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -8,11 +8,12 @@ If the cause of the failed migration is not clear, see xref:Logs[] and xref:Comm
 [[Retrying_a_Migration_Plan]]
 == Retrying a Migration Plan
 
-If one or more virtual machines in a migration plan fails to migrate, the migration plan's status is `Failed`. You can retry a migration plan:
+If one or more virtual machines in a migration plan fails to migrate, the migration plan's status is `Failed`. After resolving the issue that caused the migration failure, you can retry the migration plan:
 
 . Click the migration plan to go to the details page to identify the virtual machines that failed to migrate.
-. Delete the target virtual machines that were created during the failed migration to avoid name conflicts.
-. Delete the target disks that were created during the failed migration to free up space.
+. If the migration failed while virtual machines were being converted:
+.. Delete newly created target virtual machines to avoid name conflicts with source virtual machines.
+.. Delete newly created disks in the target datastore to free up space.
 . Click menu:Compute[Migration], select `Failed Migrations`, select the failed migration plan, and click `Retry`.
 
 [[Logs]]
@@ -42,14 +43,17 @@ If the infrastructure mapping displays a *Networks missing* error message, you m
 +
 image:Mapping_missing_network.png[]
 
+Migration plan does not discover virtual machines::
+If you are migrating previously migrated virtual machines, the migration plan cannot discover them because they are marked in the CloudForms VMDB as `migrated`. You must xref:Remigrating_Virtual_Machines[remigrate the virtual machines].
+
 Incorrect attributes in the virtual machine CSV import file::
-Create a new migration plan, import the correct CSV file, and run the migration plan.
+After you correct the xref:CSV_file[CSV file], create a new migration plan, import the updated CSV file, and run the migration plan.
 
 Migration fails immediately::
-If a migration fails immediately, before the progress bar is displayed, this is often caused by a configuration error in the environment. Check the *automation.log* file on the CloudForms appliance.
+If a migration fails immediately, before the progress bar is displayed, this is often caused by a configuration error in the environment. Check the *automation.log* file on the CloudForms appliance to determine the cause. When the cause has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
 
 Migration fails during virtual machine conversion::
-If a migration fails when the virtual machines are being converted (the progress bar updates), click the migration plan to go to the details page, and download the conversion log for the the virtual machine(s) that failed to migrate.
+If a migration fails while the virtual machines are being converted (the progress bar updates), click the migration plan to go to the details page, and download the conversion log for the virtual machine(s) that failed to migrate. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
 
 [[SSH_transformation_fails]]
 SSH transformation fails::
