add to general config

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -3199,4 +3199,5 @@ To reset your database maintenance settings, enter *Configure Database Maintenan
 
 To configure a new database maintenance schedule, enter the *Configure Database Maintenance* menu item once again and configure the values using the dialog.
 
-
+==== Creating a Database Dump
+include::common/database-dumps.adoc[]
