--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
@@ -1,7 +1,11 @@
 [id="Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation"]
 = Creating and Configuring RHV Conversion Hosts for VDDK Transformation
 
-. Log in to link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
+. Go to link:https://www.vmware.com/support/pubs/[VMware Documentation], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
+
+. Click `Latest Releases` and select the latest VDDK release.
+
+. Download the SDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
