--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -3,7 +3,7 @@
 
 Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization.
 
-link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] (CF),  provides the control and automation required to manage challenging enterprise environments.
+link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], provides the control and automation required to manage challenging enterprise environments.
 
 Currently, IMS supports only cold migration. The virtual machines are powered off gracefully as part of the migration process.
 
