--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible.adoc
@@ -1,6 +1,6 @@
-[id="Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible"]
+[id="Automating_pre_and_post_migration_tasks_with_ansible"]
 = Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible
 
-{product-title} enables you to use Ansible playbooks to automate tasks on virtual machines before or after migration. For example, use a playbook to remove web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration. You create an Ansible service catalog item that contains the playbook and select it while creating the infrastructure migration plan.
+You can automate tasks on virtual machines before or after migration with Ansible playbooks. For example, use a playbook to remove web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration. You create an Ansible service catalog item that contains the playbook and select it while creating the infrastructure migration plan.
 
 Use the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL Pre-migration Ansible Playbook Example] to configure the target Red Hat Enterprise Linux virtual machines.
