--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -240,8 +240,7 @@ page for a mapping from the old to the new types.
 === Specifying Credentials
 
 When creating or updating providers, the credentials can be specified as a
-a single default set, or a compound set where additional credentials are necessary
-for let's say AMPQ for OpenStack or Metrics for RHEVM.
+a single default set, or a compound set where additional credentials are necessary, for example AMPQ for OpenStack or Metrics for RHEVM.
 
 Single default credentials set:
 
@@ -283,7 +282,7 @@ Compound credentials set:
 [[specifying-connection-configurations]]
 === Specifying Connection Configurations
 When creating or updating providers, connection configurations can be set. Connection configurations can be used
-to specify resources such as an amqp event provider for Openstack, adding Hawkular metrics, or an Authentication token.
+to specify resources such as an `amqp` event provider for OpenStack, adding Hawkular metrics, or an authentication token.
 
 Hawkular metrics:
 
@@ -626,7 +625,7 @@ Kubernetes Container Manager:
 }
 ----
 
-Microsoft System Center VMM:
+Microsoft System Center VMM (SCVMM):
 [source,json]
 ----
 {
@@ -649,7 +648,7 @@ Microsoft System Center VMM:
 }
 ----
 
-Openshift Container Manager:
+OpenShift Container Manager:
 [source,json]
 ----
 {
@@ -674,7 +673,7 @@ Openshift Container Manager:
 }
 ----
 
-Openstack Cloud Manager:
+OpenStack Cloud Manager:
 [source,json]
 ----
 {
@@ -698,7 +697,7 @@ Openstack Cloud Manager:
 }
 ----
 
-Openstack Infra Manager:
+OpenStack Infra Manager:
 [source,json]
 ----
 {
