--- a/doc-REST_API/topics/scan_containers.adoc
+++ b/doc-REST_API/topics/scan_containers.adoc
@@ -1,7 +1,7 @@
 [[scan-containers]]
 ==== Scanning Containers
 
-Scan containers using SmartState.
+Scan containers using SmartState Analysis.
 
 [NOTE]
 ====
