--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,9 +1,13 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution Overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization.
+Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform.
 
-link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], provides the control and automation required to manage challenging enterprise environments.
+link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+
+link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] (OpenStack) provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
+
+The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], provides the control and automation required to manage challenging enterprise environments.
 
 Currently, IMS supports only cold migration. The virtual machines are powered off gracefully as part of the migration process.
 
@@ -28,3 +32,5 @@ The Infrastructure Migration Solution has 4 key phases:
 .. If errors appear, see xref:Troubleshooting[].
 
 include::modules/con_Workflow_vmware_to_rhv.adoc[leveloffset=+1]
+
+include::modules/con_Workflow_vmware_to_osp.adoc[leveloffset=+1]
