cherry-pick, resolve merge conflict

--- a/doc-High_Availability_Guide/miq/index.adoc
+++ b/doc-High_Availability_Guide/miq/index.adoc
@@ -20,3 +20,4 @@ include::topics/Database_Failover.adoc[]
 include::topics/HAProxy.adoc[]
 include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
+include::topics/Renaming_HA_appliances.adoc[]
