--- a/doc-High_Availability_Guide/cfme/master.adoc
+++ b/doc-High_Availability_Guide/cfme/master.adoc
@@ -21,6 +21,7 @@ include::topics/HAProxy.adoc[]
 include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
 include::topics/Updating_HA.adoc[]
+include::topics/Renaming_HA_appliances.adoc[]
 
 
 
