Added temp image, updated workflow section

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Workflow_vmware_to_rhv.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Workflow_vmware_to_rhv.adoc
@@ -1,5 +1,5 @@
 [id="Workflow_vmware_to_rhv"]
-= VMware to Red Hat Virtualization
+= Workflow: Migrating to Red Hat Virtualization
 
 This workflow occurs when you migrate your infrastructure from VMware to Red Hat Virtualization.
 
